syntax = "proto3";

package com.cgi.eoss.fstep;

import "common_messages.proto";

option java_multiple_files = true;
option java_package = "com.cgi.eoss.fstep.rpc";

service FstepServiceLauncher {
    rpc LaunchService (FstepServiceParams) returns (stream FstepServiceResponse);
    rpc ListWorkers (ListWorkersParams) returns (WorkersList);
}

message FstepServiceParams {
    string jobId = 1;
    string userId = 2;
    string serviceId = 3;
    repeated JobParam inputs = 4;
    string jobConfigLabel = 5;
}

message FstepServiceResponse {
    message JobOutputs {
        repeated JobParam outputs = 1;
    }
    oneof Payload {
        Job job = 1;
        JobOutputs jobOutputs = 2;
    }
}

message ListWorkersParams {
}

message WorkersList {
    repeated Worker workers = 1;
}

message Worker {
    string host = 1;
    int32 port = 2;
    string environment = 3;
}